--- a/kontakt.html
+++ b/kontakt.html
@@ -27,9 +27,7 @@
           Aus diesem Grund ersuchen wir Sie, sich kurz Zeit zu nehmen und
           nachfolgendes Formular auszufüllen!<br />
         </p>
-        <p style="font-style: italic">
-          Konstruktives Feedback ist uns sehr wichtig.
-        </p>
+        <p>Konstruktives Feedback ist uns sehr wichtig.</p>
       </article>
       <form method="POST" action="" id="kontaktformular">
         <div class="formular">
