--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="infos.html">Infos</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
+        <li><a href="affen.html">Affen</a></li>
       </ul>
     </nav>
     <main>
