Several tasks completed (Work in progress)

--- a/bonus.html
+++ b/bonus.html
@@ -5,6 +5,14 @@
     <meta name="description" content="Herzlich Willkommen im Zoo!" />
     <meta name="viewport" content="width-device-width, initial-scale=1" />
     <link rel="stylesheet" href="style/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap"
+      rel="stylesheet"
+    />
     <title>Tierpark Entenhausen - Home</title>
   </head>
   <body>
@@ -16,10 +24,25 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="infos.html">Infos</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
-        <li><a href="affen.html">Affen</a></li>
+        <li><a href="bonus.html">Bonus</a></li>
       </ul>
     </nav>
     <main>
+      <article>
+        <p>
+          Als besonderes Schmankerl präsentieren wir Ihnen stolz unseren
+          "Selfie-Affen" Manfred. <br />
+          Manfred hat die Liebe zur Kamera für sich entdeckt und macht seitdem
+          täglich ein Selfie (oder manchmal auch mehrere). Er ist der Geheimtipp
+          unseres Zoos - besuchen Sie ihn noch heute und machen Sie ein Selfie
+          mit ihm!
+        </p>
+      </article>
+      <img
+        id="foto_manfred"
+        src="media/affe_manfred.jpg"
+        alt="Unser Affe Manfred in Action"
+      />
       <article>
         <p>Bis bald im <strong>Tierpark Entenhausen</strong>!</p>
       </article>
