--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="description" content="Herzlich Willkommen im Zoo!" />
     <meta name="viewport" content="width-device-width, initial-scale=1" />
     <link rel="stylesheet" href="style/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap"
+      rel="stylesheet"
+    />
     <title>Tierpark Entenhausen - Home</title>
   </head>
   <body>
@@ -16,7 +24,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="infos.html">Infos</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
-        <li><a href="affen.html">Affen</a></li>
+        <li><a href="bonus.html">Bonus</a></li>
       </ul>
     </nav>
     <main>
