Added one html site, style adaptions

--- a/bonus.html
+++ b/bonus.html
@@ -29,20 +29,11 @@
     </nav>
     <main>
       <article>
-        <p>
-          Als besonderes Schmankerl präsentieren wir Ihnen stolz unseren
-          "Selfie-Affen" Manfred. <br />
-          Manfred hat die Liebe zur Kamera für sich entdeckt und macht seitdem
-          täglich ein Selfie (oder manchmal auch mehrere). Er ist der Geheimtipp
-          unseres Zoos - besuchen Sie ihn noch heute und machen Sie ein Selfie
-          mit ihm!
+        <p id="panorama">
+          Als besonderes Schmankerl präsentieren wir Ihnen ein exklusives
+          Panoramafoto unseres Savannenbereichs im Zoo!
         </p>
       </article>
-      <img
-        id="foto_manfred"
-        src="media/affe_manfred.jpg"
-        alt="Unser Affe Manfred in Action"
-      />
       <article>
         <p>Bis bald im <strong>Tierpark Entenhausen</strong>!</p>
       </article>
