--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
   </head>
   <body>
     <header>
-      <h1>Tierpark Entenhausen - Schauen Sie doch mal rein!</h1>
+      <h1>
+        <a href="index.html"
+          >Tierpark Entenhausen - Schauen Sie doch mal rein!</a
+        >
+      </h1>
     </header>
     <nav>
       <ul>
@@ -25,6 +29,7 @@
         <li><a href="infos.html">Infos</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
         <li><a href="bonus.html">Bonus</a></li>
+        <li><a href="covid.html">Coronavirus</a></li>
       </ul>
     </nav>
     <main>
