--- a/infos.html
+++ b/infos.html
@@ -13,7 +13,7 @@
     <header>
         <h1>
             <a href="index.html"
-              >Tierpark Entenhausen - Schauen Sie doch mal rein!</a
+              >Tierpark Entenhausen - Herzlich willkommen!</a
             >
           </h1>
     </header>
