--- a/kontakt.html
+++ b/kontakt.html
@@ -18,9 +18,7 @@
   <body>
     <header>
       <h1>
-        <a href="index.html"
-          >Tierpark Entenhausen - Schauen Sie doch mal rein!</a
-        >
+        <a href="index.html">Tierpark Entenhausen - Herzlich willkommen!</a>
       </h1>
     </header>
     <nav>
